Authors: Add STiL as author
Signed-off-by: em <eminemix@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Here is an inevitably incomplete list of MUCH-APPRECIATED CONTRIBUTORS
-	em
-	shaggi
+	em (eminemix)
+	shaggi (nemurici)
+	STiL (BogdanWDK)
